# word-analysis-tool

./: README.md  example.txt  follow.md  output.csv  pyproject.toml
word_analysis_tool/: main.py
word_analysis_tool/data/: stop_words.py  word_bank.py
word_analysis_tool/utils/: csv_operations.py  file_operations.py  text_operations.py
