[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "word-analysis-tool"
version = "0.1.0"
description = ""
authors = [{name = "Matthias"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

# [project.urls]
# homepage = "https://example.com/spotify-daylist"
# repository = "https://github.com/matthias/spotify-daylist"
# documentation = "https://example.com/spotify-daylist/docs"
