[tool.poetry]
name = "word_analysis_tool"
version = "0.1.0"
description = "A tool to analyze word frequency in text documents."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{include = "word_analysis_tool", from = "."}]

# packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.7"

# [tool.poetry.dev-dependencies]
# pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
word-analysis = "word_analysis_tool.main:main"